chore: add commitizen

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,3 +51,11 @@ skips = ["B101"]  # Skip assert statements in tests
 [tool.isort]
 profile = "black"
 src_paths = ["app"]
+
+
+[tool.commitizen]
+name = "cz_conventional_commits"
+tag_format = "$version"
+version_scheme = "semver"
+version_provider = "poetry"
+update_changelog_on_bump = true
