--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,5 @@
 [project]
 name = "perfect_repo"
-version = "0.1.0"
 description = "A repository following common DevOps practices"
 authors = [
     {name = "Filipe Galo",email = "fcostagal@gmail.com"}
@@ -21,6 +20,7 @@ bandit = "^1.8.3"
 isort = "^6.0.1"
 ruff = "^0.11.12"
 commitizen = "^4.8.2"
+pytest-cov = "^6.1.1"
 
 
 [tool.poetry.group.test.dependencies]
@@ -32,6 +32,7 @@ requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
+version = "0.0.1"
 packages = [
     { include = "app" }
 ]
@@ -45,7 +46,7 @@ indent-style = "tab"
 docstring-code-format = true
 
 [tool.bandit]
-exclude_dirs = ["tests"]
+exclude_dirs = ["tests", ".venv"]
 skips = ["B101"]  # Skip assert statements in tests
 
 [tool.isort]
