--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          fetch-depth: 0 # Required for commitizen history
+          fetch-depth: 0
 
       - name: Set up Python
         uses: actions/setup-python@v5
