--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - main
     types: [opened, synchronize, reopened]
+    paths:
+      - "app/**"
+      - "tests/**"
 
 jobs:
   quality:
