--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,22 +38,16 @@ jobs:
       - name: Run tests
         run: poetry run pytest
 
-      - name: Bump version and create changelog
-        run: |
-          poetry run cz bump --yes
-
-      - name: Push changes
-        run: git push --tags
-
-      - name: Get new version
-        id: get_version
-        run: echo "version=$(poetry version -s)" >> $GITHUB_OUTPUT
-
-      - name: Create GitHub Release
-        uses: softprops/action-gh-release@v2
+      - name: Create bump and changelog
+        uses: commitizen-tools/commitizen-action@master
         with:
-          tag_name: v${{ steps.get_version.outputs.version }}
-          name: Release v${{ steps.get_version.outputs.version }}
-          body_path: CHANGELOG.md
-          draft: false
-          prerelease: false
+          github_token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+          changelog_increment_filename: body.md
+
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        with:
+          body_path: "body.md"
+          tag_name: ${{ env.REVISION }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
